Name the seam objc, and ship appkit inside rontolisp
gui named the use rather than the seam, and the binding is not GUI-only. Two
probes settle it: the ObjC runtime hands back a selector's whole signature,
structs included, so objc:send derives its FunctionDescriptor instead of
carrying a hand-written table -- and a census of 9,932 AppKit methods says 25
registered shapes reach 86% of them, 50 reach 91%, which is what a native
image needs to serve a dynamic send at all. A framework-named builtin would
throw that away for a widget surface someone has to keep growing in Java.

appkit is then the linalg pattern rather than the swing example: rontolisp
source on the classpath, spliced lazily by the interpreter and prepended by
the compile path, carried into the native binary by resource-config. A user
types (appkit:window ...) into a bare REPL -- no require, no file to copy.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>